--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@
 /config/master.key
 
 /config/initializers/pusher.rb
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
